# cookiecutter-hypermodern-python

./: README.md  cookiecutter.json
tools/: dependencies-table.py
{{cookiecutter.project_name}}/: .flake8  .gitignore  CONTRIBUTING.md  noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/.github/: dependabot.yml
{{cookiecutter.project_name}}/.github/workflows/: constraints.txt  release.yml  tests.yml
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py
{{cookiecutter.project_name}}/tests/: test_main.py
{{cookiecutter.repo_name}}/: .gitlint  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
{{cookiecutter.repo_name}}/.github/: constraints.txt  dependabot.yml
{{cookiecutter.repo_name}}/.github/actions/aws-auth-with-codeartifact/: action.yml
{{cookiecutter.repo_name}}/.github/actions/set-up-python-with-poetry/: action.yml
{{cookiecutter.repo_name}}/.github/workflows/: constraints.txt  release.yml  tests.yml
{{cookiecutter.repo_name}}/docs/: index.md
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: __init__.py
