[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.friendly_name}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.license}}"
readme = "README.md"
homepage = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"
repository = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"
{% if cookiecutter.package_name != cookiecutter.project_name.replace('-', '_') -%}
packages = [
    { include = "{{cookiecutter.package_name}}", from = "src" },
]
{% endif -%}
classifiers = [
    "{{cookiecutter.development_status}}",
]

[tool.poetry.urls]
Changelog = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}/releases"

[tool.poetry.dependencies]
python = "^3.9"
coloredlogs = "^15.0"
typer = "^0.7"

[tool.poetry.group.pre-commit]
optional = true

[tool.poetry.group.pre-commit.dependencies]
bandit = "^1.7"
black = "^23.3"
darglint = "^1.8"
flake8 = "^6.0"
flake8-bugbear = "^23.3"
flake8-docstrings = "^1.7"
flake8-rst-docstrings = "^0.3"
isort = "^5.12"
pep8-naming = "^0.13"
pre-commit = "^3.2"
pre-commit-hooks = "^4.4"
pyupgrade = "^3.3"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
Pygments = "^2.15"
pytest = "^7.3"
pytest-mock = "^3.10"
pytest-cov = "^4.0"

[tool.poetry.group.coverage]
optional = true

[tool.poetry.group.coverage.dependencies]
coverage = {extras = ["toml"], version = "^7.2"}

[tool.poetry.group.mypy]
optional = true

[tool.poetry.group.mypy.dependencies]
mypy = "^1.2"

[tool.poetry.group.typeguard]
optional = true

[tool.poetry.group.typeguard.dependencies]
typeguard = "^3.0"

[tool.poetry.group.safety]
optional = true

[tool.poetry.group.safety.dependencies]
safety = "^2.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
furo = ">=2023.3.27"
myst-parser = "^1.0"
sphinx = "^6.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = "^4.4"

[tool.poetry.group.xdoctest]
optional = true

[tool.poetry.group.xdoctest.dependencies]
xdoctest = {extras = ["colors"], version = "^1.1"}

[tool.poetry.scripts]
{{cookiecutter.project_name}} = "{{cookiecutter.package_name}}.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["{{cookiecutter.package_name}}", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[tool.semantic_release]
version_variable = ["src/{{cookiecutter.package_name}}/__init__.py:__static_version"]
version_toml = ["pyproject.toml:tool.poetry.version"]
commit_subject = "chore(release): v{version} [skip ci]"
branch = "main"
build_command = "poetry build"
upload_to_pypi = false
hvcs = "github"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
